[package]
name = "cmsc818l_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arkworks-gadgets = "0.3"
arkworks-utils = "1.0.0"
ark-r1cs-std = "0.3"
ark-crypto-primitives = "0.3"
ark-poly-commit = "0.3"
ark-ff = "0.3"
ark-ec = "0.3"
ark-relations = "0.3"
ark-std = "0.3"
ark-marlin = "0.3"
ark-bls12-381 = "0.3"
ark-groth16 = "0.3.0"
